FIND_PACKAGE(libmongocxx REQUIRED)
FIND_PACKAGE(libbsoncxx REQUIRED)

INCLUDE_DIRECTORIES(${LIBMONGOCXX_INCLUDE_DIRS} REQUIRED)
INCLUDE_DIRECTORIES(${LIBBSONCXX_INCLUDE_DIRS} REQUIRED)

MESSAGE("-- MONGOCXX PATH \t" ${LIBMONGOCXX_INCLUDE_DIRS})
MESSAGE("-- BSONCXX PATH \t" ${LIBBSONCXX_INCLUDE_DIRS})

# Link libraries
TARGET_LINK_LIBRARIES(
    server
    PRIVATE
    ${LIBMONGOCXX_LIBRARIES}
    ${LIBBSONCXX_LIBRARIES}
)

# Definitions
TARGET_COMPILE_DEFINITIONS(
  server
  PRIVATE
  ${LIBMONGOCXX_DEFINITIONS}
  ${LIBBSONCXX_DEFINITIONS}
)
